--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -23,6 +26,8 @@
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
     "eslint-config-next": "12.2.4",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "typescript": "^4.7.4"
   }
 }
