--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "eslint-config-next": "12.2.4",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "path": "^0.12.7",
+    "stream": "^0.0.2",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.7.4"
   }
 }
