--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "path": "^0.12.7",
+    "react-test-renderer": "^18.2.0",
     "stream": "^0.0.2",
     "ts-jest": "^29.0.1",
     "typescript": "^4.7.4"
